# rust-z3-examples

./: .gitignore  Cargo.toml  README.md
benches/: my_benchmark.rs
src/: games.rs  lib.rs  main.rs  sudoku.rs  word_game.rs
tests/: puzzle_tests.rs  sudoku_tests.rs
